@@ -20,17 +20,17 @@ package opennlp.tools.apps.review_builder;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
 
 public class MachineTranslationWrapper  {
-	private String translatorURL = "http://mymemory.translated.net/api/get?q=";
+	private final String translatorURL = "http://mymemory.translated.net/api/get?q=";
 	
 	public String translate(String sentence, String lang2lang){
 		if (sentence==null)
@@ -54,25 +54,19 @@ public class MachineTranslationWrapper  {
 			JSONObject  findObject = rootObject.getJSONObject("responseData");
 			String transl = findObject.getString("translatedText");
 			try {
-				transl = URLDecoder.decode(transl, "UTF-8");
+				transl = URLDecoder.decode(transl, StandardCharsets.UTF_8);
 			} catch (Exception e) {
 				
 			}
 			
 			return transl;
 			
-		} catch (MalformedURLException e) {
-			
+		} catch (IOException | JSONException e) {
+
 			e.printStackTrace();
 			return null;
-		} catch (JSONException e) {
-			e.printStackTrace();
-			return null;			
-		} catch (IOException e) {
-			e.printStackTrace();
-			return null;			
-		}	
-		
+		}
+
 	}
 	
 	public String rePhrase(String sentence){
@@ -80,7 +74,7 @@ public class MachineTranslationWrapper  {
 		String transl = translate(sentence, "en|es");
 		System.out.println("tranls = "+transl);
 		String inverseTransl = translate(transl, "es|en");
-		if (!(inverseTransl.indexOf("NO QUERY SPECIFIED")>-1) && !(inverseTransl.indexOf("INVALID LANGUAGE")>-1) && !(inverseTransl.indexOf("MYMEMORY WARNING")>-1))
+		if (!(inverseTransl.contains("NO QUERY SPECIFIED")) && !(inverseTransl.contains("INVALID LANGUAGE")) && !(inverseTransl.contains("MYMEMORY WARNING")))
 			return inverseTransl;
 		else 
 			return sentence;
