@@ -16,8 +16,8 @@
  */
 package opennlp.tools.similarity.apps;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -27,7 +27,7 @@ import org.apache.commons.lang.StringUtils;
 import opennlp.tools.similarity.apps.utils.PageFetcher;
 
 public class GoogleAutoCompleteQueryRunner {
-	protected PageFetcher pageFetcher = new PageFetcher();
+	protected final PageFetcher pageFetcher = new PageFetcher();
 	private final static String searchRequest = "http://google.com/complete/search?q=", suffix = "&output=toolbar";
 	
 	
@@ -35,12 +35,8 @@ public class GoogleAutoCompleteQueryRunner {
 		// insert spaces into camel cases
 		rawExpr= rawExpr.replaceAll("([a-z][a-z])([A-Z][a-z])", "$1 $2");
 		String query = rawExpr.replace(' ', '+');
-		try {
-			query = URLEncoder.encode(query, "UTF-8");
-		} catch (UnsupportedEncodingException e) {
-			e.printStackTrace();
-		}
-		
+		query = URLEncoder.encode(query, StandardCharsets.UTF_8);
+
 		String pageOrigHTML = pageFetcher.fetchOrigHTML(searchRequest +query+suffix);
 		String[] results = StringUtils.substringsBetween(pageOrigHTML, "<CompleteSuggestion>", "</CompleteSuggestion>");
 		List<List<String>> accum = new ArrayList<>();
